--- a/src/app/components/family/family.component.html
+++ b/src/app/components/family/family.component.html
@@ -1,44 +1,60 @@
 <app-navbar></app-navbar>
 <div class="flex-grid">
-  <main id="family-form">
-    <mat-toolbar>Family Information</mat-toolbar>  
-    <mat-card>
-      <form [formGroup]="familyForm">  
-
-        <div>
+  <div>
+    <mat-toolbar>Let's get started!</mat-toolbar>  
+    <mat-card>Some content here.  Do we still need the form help button?</mat-card>
+  </div>
+  <mat-card id="family-form">
+    <mat-horizontal-stepper linear labelPosition="bottom">
+      <ng-template matStepperIcon="edit">
+        <mat-icon>done</mat-icon>
+      </ng-template>
+      <mat-step [formGroup]="contactForm" [completed]="contactForm.status === 'VALID'">
+      <ng-template matStepLabel>Contact Information</ng-template>  
+        <div>  
           <mat-form-field>
             <mat-label>First Name</mat-label>
             <input matInput formControlName="firstName">
-            <mat-error *ngIf="familyForm.get('firstName').hasError('required')">{{requiredError}}</mat-error>
+            <mat-error *ngIf="contactForm.get('firstName').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
-
+        </div>
+        <div>
           <mat-form-field>
             <mat-label>Last Name</mat-label>
             <input matInput formControlName="lastName">
-            <mat-error *ngIf="familyForm.get('lastName').hasError('required')">{{requiredError}}</mat-error>
+            <mat-error *ngIf="contactForm.get('lastName').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
-        </div>
-
+        </div>  
         <div>
           <mat-form-field>
             <mat-label>Zip Code</mat-label>
-            <input matInput formControlName="zipCode">
-            <mat-error *ngIf="familyForm.get('zipCode').hasError('pattern')">Zipcode must be exactly five digits (example: 64359).</mat-error>
-            <mat-error *ngIf="familyForm.get('zipCode').hasError('required')">{{requiredError}}</mat-error>
+            <input matInput formControlName="zipCode" placeholder="Example: 78965">
+            <mat-error *ngIf="contactForm.get('zipCode').hasError('pattern')">Zipcode must be exactly five digits (example: 64359).</mat-error>
+            <mat-error *ngIf="contactForm.get('zipCode').hasError('required')">{{requiredError}}</mat-error>
+          </mat-form-field>  
+        </div>
+        <div>
+          <mat-form-field> 
+          <mat-label>Phone Number</mat-label>
+          <input matInput formControlName="phoneNumber" placeholder="Example: 777-777-7777">
+          <mat-error *ngIf="contactForm.get('phoneNumber').hasError('pattern')">Phone number must be in the following format: 555-555-5555.</mat-error>
+          <mat-error *ngIf="contactForm.get('phoneNumber').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
-          <mat-form-field>
-            <mat-label>Phone Number</mat-label>
-            <input matInput formControlName="phoneNumber">
-            <mat-error *ngIf="familyForm.get('phoneNumber').hasError('pattern')">Phone number must be in the following format: 555-555-5555.</mat-error>
-            <mat-error *ngIf="familyForm.get('phoneNumber').hasError('required')">{{requiredError}}</mat-error>
-          </mat-form-field>
+        </div>
+        <div>  
           <mat-form-field>
             <mat-label>Email Address (optional)</mat-label>
             <input matInput formControlName="emailAddress">
-            <mat-error *ngIf="familyForm.get('emailAddress').hasError('email')">Email address must include the @ symbol.</mat-error>
+            <mat-error *ngIf="contactForm.get('emailAddress').hasError('email')">Email address must include the @ symbol.</mat-error>
           </mat-form-field>
         </div>
-
+        <div class="button-space">
+          <div></div>
+          <button mat-raised-button matStepperNext [disabled]="!contactForm.valid">Next</button>
+        </div>
+        </mat-step>
+        <mat-step [formGroup]="householdForm" [completed]="householdForm.status === 'VALID'">  
+        <ng-template matStepLabel>Household Information</ng-template>    
         <div>
           <mat-form-field>
             <mat-label>Family Size</mat-label>
@@ -53,8 +69,10 @@
               <mat-option [value]=8>8</mat-option>
               <mat-option [value]=9>9+</mat-option>
             </mat-select>
-            <mat-error *ngIf="familyForm.get('familySize').hasError('required')">{{requiredError}}</mat-error>  
+            <mat-error *ngIf="householdForm.get('familySize').hasError('required')">{{requiredError}}</mat-error>  
           </mat-form-field>
+        </div>
+        <div>  
           <mat-form-field>
             <mat-label>School Aged Children</mat-label>
             <mat-select matInput formControlName="schoolChildren">
@@ -66,36 +84,50 @@
               <mat-option [value]=5>5</mat-option>
               <mat-option [value]=6>6+</mat-option>
             </mat-select>
-            <mat-error *ngIf="familyForm.get('schoolChildren').hasError('required')">{{requiredError}}</mat-error>
+            <mat-error *ngIf="householdForm.get('schoolChildren').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
+        </div>
+        <div>  
           <mat-form-field>
             <mat-label>Any Infants in the Family?</mat-label>
             <mat-select matInput formControlName="infants">
               <mat-option [value]=true>Yes</mat-option>
               <mat-option [value]=false>No</mat-option>
             </mat-select>
-            <mat-error *ngIf="familyForm.get('infants').hasError('required')">{{requiredError}}</mat-error>  
+            <mat-error *ngIf="householdForm.get('infants').hasError('required')">{{requiredError}}</mat-error>  
           </mat-form-field>  
         </div>
-        
+        <div class="button-space">
+          <button mat-raised-button matStepperPrevious>Back</button>
+          <button mat-raised-button matStepperNext [disabled]="!householdForm.valid">Next</button>
+        </div>
+        </mat-step>
+        <mat-step [formGroup]="pickUpForm" [completed]="pickUpForm.status === 'VALID'">
+        <ng-template matStepLabel>Pick Up Options</ng-template>  
         <div>
           <mat-form-field>
             <mat-label>Were you referred by CELC?</mat-label>
-            <mat-select matInput formControlName="referral">
+            <mat-select matInput formControlName="referral" (selectionChange)="setPickUpDateOptions($event.value)">
               <mat-option [value]=true>Yes</mat-option>
               <mat-option [value]=false>No</mat-option>
             </mat-select>
-            <mat-error *ngIf="familyForm.get('referral').hasError('required')">{{requiredError}}</mat-error>
+            <mat-error *ngIf="pickUpForm.get('referral').hasError('required')">{{requiredError}}</mat-error>
           </mat-form-field>
         </div>
-
-        <div id="button-space">
-          <div></div>
-          <button mat-raised-button (click)="onNextClick()" [disabled]="!familyForm.valid">Next</button>
+        <div>
+          <mat-form-field>
+            <mat-label>Pick Up Dates:</mat-label>
+            <mat-select matInput formControlName="pickUpDate">
+              <mat-option *ngFor="let pickUpDate of pickUpDateOptions" [value]="pickUpDate">{{pickUpDate}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="pickUpForm.get('pickUpDate').hasError('required')">This field is required.</mat-error>  
+          </mat-form-field>
         </div>
-
-      </form>
-
-    </mat-card>
-  </main>  
+        <div class="button-space">
+          <button mat-raised-button matStepperPrevious>Back</button>
+          <button mat-raised-button matStepperNext [disabled]="!pickUpForm.valid" (click)="onShopClick()">Shop!</button>
+        </div>
+      </mat-step>
+    </mat-horizontal-stepper>
+  </mat-card>  
 </div>
