--- a/src/app/components/questions-modal/questions-modal.component.html
+++ b/src/app/components/questions-modal/questions-modal.component.html
@@ -44,6 +44,6 @@
       </mat-card-content>
     </ng-container>
     <div>
-      <button mat-raised-button (click)="closeModal()"cdkFocusInitial>{{buttonContent}}</button>
+      <button mat-raised-button (click)="onCloseClick()"cdkFocusInitial>{{buttonContent}}</button>
     </div>    
     </ng-container>    
