--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,5 +1,5 @@
 #grid-container {
-    margin-top: 5%;
+    margin-top: 7%;
     display: flex;
     justify-content: space-around;
 }
@@ -9,21 +9,38 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+.mat-toolbar {
+    background: orange;
+    border: solid black 1px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    color: black;
+    justify-content: center;
+}
 .mat-card {
     background: #603A17;
-    border-radius: 10px;
-    /* min-width: 700px; */
+    /* min-width: 700px;  */
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto;
-    justify-items: center;  
+    justify-items: center; 
 }
 #message-button-container {
+    margin-left: 10%;
     justify-items: center;
+}
+#message-button-container .mat-card {
+    background: #71A040;
+    border: solid black 1px;
+    border-top: 0;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    display: grid;
+    grid-template-columns: auto;
 }
 button {
     background-color: #F6D936;
     border: solid black .5px;
     color: black;
-    margin-left: 15%;
+    margin: 0;
 }
