--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 flex: 1;
 }
 .mat-form-field {
-  width: 350px;
+  width: 30rem;
 }
 .mat-focused .mat-form-field-label {
   color: black !important;
@@ -49,5 +49,9 @@ flex: 1;
 }
 .mat-form-field.mat-focused.mat-primary .mat-select-arrow {
   color: black;
+}
+.mat-horizontal-stepper-content {
+  /* margin-left: 5%; */
+  /* margin-right: 10%; */
 }
 
