--- a/src/app/components/family/family.component.html
+++ b/src/app/components/family/family.component.html
@@ -2,7 +2,7 @@
 <div class="flex-grid">
   <div>
     <mat-toolbar>Let's get started!</mat-toolbar>  
-    <mat-card>Some content here.  Do we still need the form help button?</mat-card>
+    <mat-card id="intro-card">Some content here.  Do we still need the form help button?</mat-card>
   </div>
   <mat-card id="family-form">
     <mat-horizontal-stepper linear labelPosition="bottom">
