--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,5 +2,5 @@
   <img src="../../../assets/images/bsfp-logo-navbar.png" alt="bsfp-logo-navbar">
   <span></span>
   <button mat-raised-button (click)="openQuestionsModal()">{{buttonContent}}</button> 
-  <button mat-raised-button (click)="authService.logout()" *ngIf="authService.loggedIn">Log Out</button>
+  <button mat-raised-button (click)="onLogOutClick()" *ngIf="authService.loggedIn">Log Out</button>
 </mat-toolbar>
