--- a/src/app/components/submit-modal/submit-modal.component.html
+++ b/src/app/components/submit-modal/submit-modal.component.html
@@ -1,3 +1,15 @@
-<p>
-  submission works!
-</p>
+<div id="success">
+  <span>Success!</span>
+</div>
+<mat-card *ngIf="!data.family.referral">
+  {{'Your order will be ready for pick on ' + data.pickUpDate + ' at the Broad Street Food Pantry.'}}
+</mat-card>
+<mat-card *ngIf="data.family.referral">
+  {{'Your order will be delivered on ' + data.pickUpDate + ' by CELC.'}}
+</mat-card>
+<div id="log-out">
+  <span>Please don't forget to log out.</span>
+</div>
+<div>
+  <button mat-raised-button (click)="authService.logout()">Log Out</button>
+</div>
