--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -66,7 +66,7 @@
       </mat-expansion-panel-header>
       <div class="info-container">
         <mat-card>{{family.referral ? 'Pick Up Location: CELC' : 'Pick Up Location: Broad Street Food Pantry'}}</mat-card>
-        <mat-card>{{'Pick Up Date: ' + family.pickUpDate}}</mat-card>
+        <mat-card>{{'Pick Up Date: ' + pickUpDate}}</mat-card>
         <div class="update-button-div">
           <button mat-raised-button (click)="openUpdatePickUpModal()">Update Pick Up</button>
         </div>
@@ -77,18 +77,18 @@
     <mat-expansion-panel (opened) ="cartPanelOpenState = true" (closed)="cartPanelOpenState = false" [expanded]="cartPanelOpenState">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Cart Details
+        Your Cart
       </mat-panel-title>
       <mat-panel-description>
         {{cartPanelOpenState ? 'close' : 'open'}}
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <mat-card id="empty-cart" *ngIf="!cart.cartItemsByType.length">
+    <mat-card id="empty-cart" *ngIf="!cart.length">
         Cart is empty!<br><br>
-        To place an order, please press "Update" and add items to the cart.
+        To place an order, please press the "Back to Shop" button and add items.
     </mat-card>
-    <ng-container *ngIf="cart.cartItemsByType.length">
-      <ng-container *ngFor="let type of cart.cartItemsByType">
+    <ng-container *ngIf="cart.length">
+      <ng-container *ngFor="let type of cart">
           <mat-toolbar class="items-toolbar top-table">{{type.typeName}}</mat-toolbar>
           <table mat-table [dataSource]="type.items">
             <ng-container matColumnDef="column1">
@@ -115,7 +115,7 @@
   <aside class="button-container">
     <mat-toolbar>Ready to Submit?</mat-toolbar>
     <div class="button-div">
-      <button mat-raised-button (click)="onSubmitOrder()" [disabled]="!cart.cartItemsByType.length">Submit Order</button>
+      <button mat-raised-button (click)="onSubmitOrder()" [disabled]="!cart.length">Submit Order</button>
     </div>  
   </aside>
 </div>  
