--- a/src/app/components/update-modal/update-modal.component.css
+++ b/src/app/components/update-modal/update-modal.component.css
@@ -8,3 +8,17 @@
     display: flex;
     justify-content: space-between;
 }
+header {
+    display: flex;
+    font-size: large;
+    justify-content: center;
+    margin-bottom: 2%;
+}
+#household-caution {
+    background: #a93610;
+    border: 1px black solid;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+}
